--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.23.1",
     "react-scripts": "5.0.1",
+    "react-tweet-embed": "^2.0.0",
+    "react-twitter-widgets": "^1.11.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
