--- a/package.json
+++ b/package.json
@@ -3,12 +3,15 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^6.5.2",
+    "@fortawesome/react-fontawesome": "^0.2.2",
     "@fvilers/disable-react-devtools": "^1.3.0",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.7.1",
     "i": "^0.3.7",
+    "jsonwebtoken": "^9.0.2",
     "npm": "^10.8.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
